<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Fondo -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/wood_background"
            android:scaleType="centerCrop"/>

        <!-- Toolbar personalizada -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="334dp"
            android:layout_height="60dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/toolbar_background"
            android:elevation="4dp"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Iconos de la Toolbar -->
                <ImageButton
                    android:id="@+id/icon_star"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/icono_de_calificaci_n"
                    android:src="@drawable/ic_star" />

                <ImageButton
                    android:id="@+id/icon_power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/icono_de_musica"
                    android:src="@drawable/ic_sound_on" />

                <ImageButton
                    android:id="@+id/icon_instructions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/icono_de_instrucciones"
                    android:src="@drawable/ic_instructions" />

                <ImageButton
                    android:id="@+id/icon_add_challenges"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/icono_de_agregar_retos"
                    android:src="@drawable/ic_add" />

                <ImageButton
                    android:id="@+id/icon_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/icono_de_compartir"
                    android:src="@drawable/ic_share" />

                <ImageButton
                    android:id="@+id/icon_logout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/icono_de_cerrar_sesion"
                    android:src="@drawable/ic_logout"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <!-- Imagen de la botella -->
        <ImageView
            android:id="@+id/bottleIcon"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/bottle_icon"
            android:contentDescription="@string/bottle_icon_desc" />

        <!-- Contador de tiempo -->
        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="3"
            android:textSize="55sp"
            android:textColor="@color/orange"
            android:gravity="center"
            android:fontFamily="@font/holenvintage"/>

        <!-- Botón circular -->
        <ImageButton
            android:id="@+id/btnPressMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="80dp"
            android:src="@drawable/circular_button"
            android:contentDescription="@string/boton_de_juego"
            android:background="@null"/>

        <!-- Texto debajo de la botella -->
        <TextView
            android:id="@+id/text_presioname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="45dp"
            android:text="@string/presi_name"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:fontFamily="@font/holenvintage" />

    </FrameLayout>
</layout>
